Archive2/b2/54c0c07ddbf016/output
main.cpp:14:6: error: extra ';' [-Wpedantic]
     };
      ^
main.cpp:19:6: error: extra ';' [-Wpedantic]
     };
      ^
